themistokles/ge/overlays/hellenistike/traefik/patch-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  routes:
    - match: Host(`traefik.hellenistike.odysseia-greek`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
